# raptar

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TEST_COVERAGE.md  TLDR.md  build.rs  clippy.toml  deny.toml  justfile
.github/workflows/: ci.yml
ecosystems/: MANIFEST
src/: archive.rs  config.rs  ecosystem.rs  main.rs  rules.rs  walk.rs
tests/: comprehensive_edge_cases.rs  integration.rs  rules_test.rs  verbose_mode_tests.rs
